--- a/LatihanCoba1/Base.lproj/Main.storyboard
+++ b/LatihanCoba1/Base.lproj/Main.storyboard
@@ -33,6 +33,7 @@
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="astronoutButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dyX-Nb-nAf"/>
+                                            <action selector="astrountCobaTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Aq-wb-2N4"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Pz-ac-R18">
@@ -116,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="19.534883720930232" y="3.218884120171674"/>
+            <point key="canvasLocation" x="18.46153846153846" y="2.8436018957345972"/>
         </scene>
     </scenes>
     <resources>
